--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>This is new repo</h1>
-    <p>this is new feautre</p>
+    <p>this is new feautre <button>new</button></p>
 </body>
 </html>
